Mon Jun 04 23:55:44 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c: Add dnd (that is drag) to the screenshot
	  applet, lots of cool and evil foo to create a temporary file
	  asynchroniously and then maybe use it when saving etc... still some
	  bits a bit rough but generally works well.  To make this seem
	  very snappy it starts saving the file immediately which is useless if
	  the user wants to print the darn thing or cancel.

Mon Jun 04 20:25:54 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c: select the filename and setup activate
	  on the save entry so that it's easy and fast to control with the
	  keyboard.  Also when busy make the window insensitive to give
	  better feedback that things are happening.

Fri Jun 01 16:20:15 2001  George Lebl <jirka@5z.com>

	* panel-widget.c: when stoppong movement 1) ignore the press when
	  we are still in movement mode and wipe the "event" signal, and 2)
	  on release wipe the "event" signal yet again.  This way moving 
	  menu buttons from right click menu actually works.

Thu May 31 00:12:53 2001  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, session.c, config/panel.global:  Add the
	  window screenshot key to the default config and make the default
	  Shift-Print

Thu May 31 00:08:43 2001  George Lebl <jirka@5z.com>

	* global-keys.[ch], gnome-panel-properties.c: fix the usage of the
	  mod stuff, ignore bad mods in the crapplet, and properly check
	  state in the checking code.  Overall, evil shit, but it now
	  actually works.

Thu May 31 02:53:51 2001  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c (take_window_shot): bug fix for when
	the cursor's over the root window.

Wed May 30 23:28:48 2001  George Lebl <jirka@5z.com>

	* session.c, gnome-panel-properties.c, panel_config_global.h,
	  global-keys.c:  Add a Control-Print binding for taking a screenshot
	  of a specific window.

Wed May 30 22:56:57 2001  George Lebl <jirka@5z.com>
