@@ -1,3 +1,11 @@
+Tue Jun 05 02:20:07 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, gnome-panel-screenshot.c: Enabled the printing stuff
+
+	* gnome-panel-screenshot.c: Add the nautilus icon drag type and
+	  handle the case where nautilus despite our best efforts decides to
+	  move the temporary file rather then copy it.
+
 Mon Jun 04 23:55:44 2001  George Lebl <jirka@5z.com>
 
 	* gnome-panel-screenshot.c: Add dnd (that is drag) to the screenshot
